//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/field_mask.proto";
import "private/v1/virtual_machine_type.proto";

message VirtualMachinesListRequest {
  optional int32 offset = 1;
  optional int32 limit = 2;
  optional string filter = 3;
}

message VirtualMachinesListResponse {
  optional int32 size = 1;
  optional int32 total = 2;
  repeated VirtualMachine items = 3;
}

message VirtualMachinesGetRequest {
  string id = 1;
}

message VirtualMachinesGetResponse {
  VirtualMachine object = 1;
}

message VirtualMachinesCreateRequest {
  VirtualMachine object = 1;
}

message VirtualMachinesCreateResponse {
  VirtualMachine object = 1;
}

message VirtualMachinesDeleteRequest {
  string id = 1;
}

message VirtualMachinesDeleteResponse {}

message VirtualMachinesUpdateRequest {
  VirtualMachine object = 1;
  google.protobuf.FieldMask update_mask = 2;
}

message VirtualMachinesUpdateResponse {
  VirtualMachine object = 1;
}

service VirtualMachines {
  rpc List(VirtualMachinesListRequest) returns (VirtualMachinesListResponse) {}
  rpc Get(VirtualMachinesGetRequest) returns (VirtualMachinesGetResponse) {}
  rpc Create(VirtualMachinesCreateRequest) returns (VirtualMachinesCreateResponse) {}
  rpc Delete(VirtualMachinesDeleteRequest) returns (VirtualMachinesDeleteResponse) {}
  rpc Update(VirtualMachinesUpdateRequest) returns (VirtualMachinesUpdateResponse) {}
}
